Commit da Etapa 04 - Completa
 Branch Etapa 04 - MVC da Funcionalidade Histórico de Propostas, Fazer Proposta e Configuração e Perfil - Implementação da interface e lógica de negócio, concluída.